# ephemeral-env-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: README.md  ci.yaml  ephemeral-env.yaml
automation/: __init__.py  config_parser.py  constants.py  context.py  exceptions.py  github_integration.py  k8s_client.py  logger.py  main.py  template_renderer.py
automation/templates/: deployment.yaml.j2  ingress.yaml.j2  middleware.yaml.j2  service.yaml.j2
docs/: README.md
examples/: .ephemeral-config.yaml  README.md  api-only.yaml  ephemeral-config.yaml  fullstack-app.yaml  microservices.yaml  simple-frontend.yaml
templates/: README.md
tests/: README.md  conftest.py  test_config_parser.py  test_github_integration.py  test_integration.py  test_k8s_client.py  test_logger.py  test_main.py  test_template_renderer.py
tests/fixtures/: invalid_yaml.yaml
tests/fixtures/config_parser/: config_with_env.yaml  config_without_env.yaml  no_service_key.yaml  service_missing_image.yaml  service_missing_name.yaml  service_missing_port.yaml
